<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="es.tta.example.MainActivity">

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="es.tta.example.MenuActivity">

        <TextView
            android:text="@string/login_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0" />

        <EditText
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/login_edit"
            android:layout_row="1"
            android:layout_column="0" />

        <TextView
            android:text="@string/passwd_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/passwd_edit"
            android:password="true"
            android:layout_row="3"
            android:layout_column="0" />

        <Button
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:text="@string/button_send"
        android:onClick="login"
            android:layout_row="4"
            android:layout_column="0" />

    </GridLayout>

</LinearLayout>